--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1,4 +1,18 @@
 ﻿
+/* Fonts (Chrome DirectWrite & FF fix)
+-------------------------------------------------------------- */
+
+@font-face {
+    font-family: "Segoe UI Light";
+    font-weight: 100;
+    src: local("Segoe UI Light"), url("fonts/segoeui-semilight.eot") format('embedded-opentype'), url("fonts/segoeui-semilight.woff") format('woff'), url("fonts/segoeui-semilight.ttf") format('truetype');
+}
+@font-face {
+    font-family: "Segoe UI Semibold";
+    font-weight: 100;
+    src: local("Segoe UI Semibold"), url("fonts/segoeui-semibold.eot") format('embedded-opentype'), url("fonts/segoeui-semibold.woff") format('woff'), url("fonts/segoeui-semibold.ttf") format('truetype');
+}
+
 .checkbox input[type="checkbox"] {
     margin-top: 4px;
 }
