--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductAskQuestion.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductAskQuestion.cshtml
@@ -73,8 +73,7 @@
             <div class="control-group">
                 <div class="controls">
                     <button type="submit" name="send-email" class="btn btn-primary">
-                        Senden
-                        <i class="icon-caret-right"></i>
+                        <i class="icon-envelope"></i>&nbsp;@T("Common.Send")
                     </button>
                 </div>
             </div>
