--- a/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
+++ b/src/Plugins/Shipping.ByTotal/Views/ShippingByTotal/Configure.cshtml
@@ -32,16 +32,22 @@
                         columns.Bound(x => x.StateProvinceName).ReadOnly();
                         columns.Bound(x => x.Zip);
                         columns.Bound(x => x.ShippingMethodName).ReadOnly();
-                        columns.Bound(x => x.From);
-                        columns.Bound(x => x.To);
+						columns.Bound(x => x.From)
+							.Format("{0:0.00}");
+						columns.Bound(x => x.To)
+							.Format("{0:0.00}");
                         columns.Bound(x => x.UsePercentage)
                             .Centered()
                             .Template(item => @Html.SymbolForBool(item.UsePercentage))
                             .ClientTemplate(@Html.SymbolForBool("UsePercentage"));
-                        columns.Bound(x => x.ShippingChargePercentage);
-                        columns.Bound(x => x.ShippingChargeAmount);
-                        columns.Bound(x => x.BaseCharge);
-                        columns.Bound(x => x.MaxCharge);
+                        columns.Bound(x => x.ShippingChargePercentage)
+							.Format("{0:0.00}");
+						columns.Bound(x => x.ShippingChargeAmount)
+							.Format("{0:0.00}");
+						columns.Bound(x => x.BaseCharge)
+							.Format("{0:0.00}");
+                        columns.Bound(x => x.MaxCharge)
+							.Format("{0:0.00}");
                         columns.Command(commands =>
                         {
                             commands.Edit().Localize(T);
