--- a/src/Plugins/Shipping.ByWeight/Views/ShippingByWeight/Configure.cshtml
+++ b/src/Plugins/Shipping.ByWeight/Views/ShippingByWeight/Configure.cshtml
@@ -16,18 +16,24 @@
                     .Columns(columns =>
                     {
 						columns.Bound(x => x.StoreName).ReadOnly();
-                        columns.Bound(x => x.CountryName).Width(200).ReadOnly();
-                        columns.Bound(x => x.ShippingMethodName).Width(200).ReadOnly();
-                        columns.Bound(x => x.From).Width(100);
-                        columns.Bound(x => x.To).Width(100);
+                        columns.Bound(x => x.CountryName).ReadOnly();
+                        columns.Bound(x => x.ShippingMethodName).ReadOnly();
+						columns.Bound(x => x.From)
+							.Format("{0:0.00}");
+						columns.Bound(x => x.To)
+							.Format("{0:0.00}");
                         columns.Bound(x => x.UsePercentage)
                             .Centered()
                             .Template(item => @Html.SymbolForBool(item.UsePercentage))
                             .ClientTemplate(@Html.SymbolForBool("UsePercentage"));
-                        columns.Bound(x => x.ShippingChargePercentage).Width(100);
-                        columns.Bound(x => x.ShippingChargeAmount).Width(100);
-                        columns.Bound(x => x.SmallQuantitySurcharge).Width(100);
-                        columns.Bound(x => x.SmallQuantityThreshold).Width(100);
+						columns.Bound(x => x.ShippingChargePercentage)
+							.Format("{0:0.00}");
+						columns.Bound(x => x.ShippingChargeAmount)
+							.Format("{0:0.00}");
+						columns.Bound(x => x.SmallQuantitySurcharge)
+							.Format("{0:0.00}");
+						columns.Bound(x => x.SmallQuantityThreshold)
+							.Format("{0:0.00}");
                         columns.Command(commands =>
                         {
                             commands.Edit();
