--- a/src/Plugins/Shipping.FixedRate/Views/ShippingFixedRate/Configure.cshtml
+++ b/src/Plugins/Shipping.FixedRate/Views/ShippingFixedRate/Configure.cshtml
@@ -13,13 +13,15 @@
 				.DataKeys(keys => keys.Add(x => x.ShippingMethodId).RouteKey("ShippingMethodId"))
 				.Columns(columns =>
 				{
-					columns.Bound(x => x.ShippingMethodName).Width(500).ReadOnly();
-					columns.Bound(x => x.Rate).Width(180);
+					columns.Bound(x => x.ShippingMethodName)
+						.ReadOnly();
+					columns.Bound(x => x.Rate)
+						.Format("{0:0.00}")
+						.Width(180);
 					columns.Command(commands =>
 					{
 						commands.Edit();
-					});
-
+					}).Width(180);
 				})
 				.Editable(x =>
 				{
@@ -28,8 +30,8 @@
 				.DataBinding(dataBinding =>
 				{
 					dataBinding.Ajax()
-						.Select("Configure", "ShippingFixedRate", new RouteValueDictionary() { { "Namespaces", "SmartStore.Plugin.Shipping.FixedRate.Controllers" }, { "area", "Shipping.FixedRate" } })
-						.Update("ShippingRateUpdate", "ShippingFixedRate", new RouteValueDictionary() { { "Namespaces", "SmartStore.Plugin.Shipping.FixedRate.Controllers" }, { "area", "Shipping.FixedRate" } });
+						.Select("Configure", "ShippingFixedRate", new RouteValueDictionary() { { "Namespaces", "SmartStore.Plugin.Shipping.FixedRate.Controllers" }, { "area", "" } })
+						.Update("ShippingRateUpdate", "ShippingFixedRate", new RouteValueDictionary() { { "Namespaces", "SmartStore.Plugin.Shipping.FixedRate.Controllers" }, { "area", "" } });
 				})
 				.EnableCustomBinding(true))
         </td>
