--- a/src/Plugins/Tax.CountryStateZip/Views/TaxCountryStateZip/Configure.cshtml
+++ b/src/Plugins/Tax.CountryStateZip/Views/TaxCountryStateZip/Configure.cshtml
@@ -13,11 +13,17 @@
 				.DataKeys(keys => keys.Add(x => x.Id).RouteKey("Id"))
 				.Columns(columns =>
 				{
-					columns.Bound(x => x.CountryName).Width(200).ReadOnly();
-					columns.Bound(x => x.StateProvinceName).Width(200).ReadOnly();
-					columns.Bound(x => x.Zip).Width(100);
-					columns.Bound(x => x.TaxCategoryName).Width(200).ReadOnly();
-					columns.Bound(x => x.Percentage).Width(100).Format("{0:G29}");
+					columns.Bound(x => x.CountryName)
+						.ReadOnly();
+					columns.Bound(x => x.StateProvinceName)
+						.ReadOnly();
+					columns.Bound(x => x.Zip)
+						.Width(140);
+					columns.Bound(x => x.TaxCategoryName)
+						.ReadOnly();
+					columns.Bound(x => x.Percentage)
+						.Width(140)
+						.Format("{0:0.00}");
 					columns.Command(commands =>
 					{
 						commands.Edit();
