--- a/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ActivityLog/ListLogs.cshtml
@@ -79,15 +79,13 @@
                         .ClientEvents(events => events.OnDataBinding("onDataBinding"))
                         .Columns(columns =>
                         {
-                            columns.Bound(x => x.ActivityLogTypeName)
-                                .Centered();
+                            columns.Bound(x => x.ActivityLogTypeName);
                             columns.Bound(x => x.CustomerId)
                                 .Template(x => Html.ActionLink(x.CustomerEmail, "Edit", "Customer", new { id = x.CustomerId }, new { }))
                                 .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Customer/Edit/") + "<#= CustomerId #>\"><#= CustomerEmail #></a>");
-                            columns.Bound(x => x.Comment)
-                                .Centered();                        
+                            columns.Bound(x => x.Comment);                        
                             columns.Bound(x => x.CreatedOn)
-                                .Centered();
+								.Width(180);
                             columns.Command(commands =>
                             {
                                 commands.Delete().Localize(T);
