--- a/src/Presentation/SmartStore.Web/Administration/Views/Blog/Comments.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Blog/Comments.cshtml
@@ -31,23 +31,19 @@
                         columns.Bound(x => x.Id)
                             .Width(50);
                         columns.Bound(x => x.BlogPostTitle)
-                            .Width(200)
+                            .Width(450)
                             .Template(x => Html.ActionLink(x.BlogPostTitle, "Edit", "Blog", new { id = x.BlogPostId }, new { }))
                             .ClientTemplate("<a href=\"" +  @Url.Content("~/Admin/Blog/Edit/") + "<#= BlogPostId #>\"><#= BlogPostTitle #></a>");
                         columns.Bound(x => x.CustomerId)
-                            .Width(50)
-                            .Template(x => Html.ActionLink(T("Admin.Common.View").Text, "Edit", "Customer", new { id = x.CustomerId }, new { }))
-                            .ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Customer/Edit/") + "<#= CustomerId #>\">" + T("Admin.Common.View").Text + "</a>");
+							.Width(200)
+                            .Template(x => Html.ActionLink(x.CustomerName, "Edit", "Customer", new { id = x.CustomerId }, new { }))
+							.ClientTemplate("<a href=\"" + @Url.Content("~/Admin/Customer/Edit/") + "<#= CustomerId #>\"><#= CustomerName #></a>");
                         columns.Bound(x => x.Comment)
-                            .Width(350)
-                            .Encoded(false)
-                            .Centered();
+                            .Encoded(false);
                         columns.Bound(x => x.IpAddress)
-                            .Width(100)
-                            .Centered();
+                            .Width(100);
                         columns.Bound(x => x.CreatedOn)
-                            .Width(100)
-                            .Centered();
+                            .Width(150);
                         columns.Command(commands =>
                         {
                             commands.Delete().Localize(T);                            
