--- a/src/Presentation/SmartStore.Web/Administration/Views/Blog/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Blog/List.cshtml
@@ -27,26 +27,15 @@
                             .ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Title #></a>");
                         columns.Bound(x => x.LanguageName);
                         columns.Bound(x => x.Comments)
-                            .Centered()
                             .Template(
                             @<div>
                                     @Html.ActionLink(T("Admin.ContentManagement.Blog.BlogPosts.Fields.Comments").Text + " - " + @item.Comments, "Comments", new { filterByBlogPostId = item.Id })
                                 </div>
                             )
                             .ClientTemplate("<div><a href=\"Comments?filterByBlogPostId=<#= Id #>\">" + T("Admin.ContentManagement.Blog.BlogPosts.Fields.Comments").Text + " - <#= Comments #>" + "</a></div>");
-                        columns.Bound(x => x.StartDate)
-                            .Centered();
-                        columns.Bound(x => x.EndDate)
-                            .Centered();
-                        columns.Bound(x => x.CreatedOn)
-                            .Centered();
-                        columns.Bound(x => x.Id)
-                            .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
-                            .Width(50)
-                            .Centered()
-                            .HeaderTemplate(T("Admin.Common.Edit").Text)
-                            .Filterable(false);
+                        columns.Bound(x => x.StartDate);
+                        columns.Bound(x => x.EndDate);
+                        columns.Bound(x => x.CreatedOn);
                     })
                     .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("List", "Blog"))
