--- a/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ContentSlider/Index.cshtml
@@ -150,9 +150,9 @@
 							.Template(x => Html.ActionLink(x.Title, "EditSlide", new { index = x.SlideIndex }))
 							.ClientTemplate("<a href=\"ContentSlider/EditSlide?index=<#= SlideIndex #>\"><#= Title #></a>");
 						columns.Bound(x => x.DisplayOrder)
-							.Centered();
-						columns.Bound(x => x.LanguageName)
-							.Centered();
+							.Centered()
+							.Width(120);
+						columns.Bound(x => x.LanguageName);
 						columns.Bound(x => x.LimitedToStores)
 							.Width(100)
 							.Template(x => @Html.SymbolForBool(x.LimitedToStores))
