--- a/src/Presentation/SmartStore.Web/Administration/Views/ExternalAuthentication/Methods.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ExternalAuthentication/Methods.cshtml
@@ -31,16 +31,19 @@
                                 </div>
                             )
                             .ClientTemplate("<a href=\"ConfigureMethod?systemName=<#= SystemName #>\">" + T("Admin.Configuration.ExternalAuthenticationMethods.Configure").Text + "</a>")
-                            .Width(100)
-                            .Centered()
+                            .Width(140)
                             .Title(T("Admin.Configuration.ExternalAuthenticationMethods.Configure").Text);
-                        columns.Bound(x => x.SystemName).Width(150).ReadOnly();
+                        columns.Bound(x => x.SystemName)
+							.Width(150)
+							.ReadOnly();
                         columns.Bound(x => x.DisplayOrder)
                             .Width(100)
+							.Centered()
                             .ReadOnly();
                         columns.Bound(x => x.IsActive)
                             .Template(item => @Html.SymbolForBool(item.IsActive))
                             .ClientTemplate(@Html.SymbolForBool("IsActive"))
+							.Centered()
                             .Width(100);
                         columns.Command(commands =>
                         {
