--- a/src/Presentation/SmartStore.Web/Administration/Views/Measure/Weights.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Measure/Weights.cshtml
@@ -2,20 +2,21 @@
 @using Telerik.Web.Mvc.UI;
 @using System.Linq;
 @{
-    //page title
     ViewBag.Title = T("Admin.Configuration.Measures.Weights").Text;
 }
+
 <div class="section-header">
     <div class="title">
         @T("Admin.Configuration.Measures.Weights")
     </div>
 </div>
+
+<div class="alert alert-warning fade in">
+	<button class="close" data-dismiss="alert">&#215;</button>
+	@T("Admin.Configuration.Measures.Weights.Description")
+</div>
+
 <table class="adminContent">
-    <tr>
-        <td>
-            <b>@T("Admin.Configuration.Measures.Weights.Description")</b>
-        </td>
-    </tr>
     <tr>
         <td>
             @(Html.Telerik().Grid(Model.Data)
@@ -26,10 +27,17 @@
                     })
                     .Columns(columns =>
                     {
-                        columns.Bound(x => x.Name).Width(200);
-                        columns.Bound(x => x.SystemKeyword).Width(150);
-                        columns.Bound(x => x.Ratio).Width(100).Format("{0:G29}");
-                        columns.Bound(x => x.DisplayOrder).Width(100);
+                        columns.Bound(x => x.Name)
+							.Width(200);
+                        columns.Bound(x => x.SystemKeyword)
+							.Width(150);
+                        columns.Bound(x => x.Ratio)
+							.RightAlign()
+							.Format("{0:0.00000000}")
+							.Width(180);
+                        columns.Bound(x => x.DisplayOrder)
+							.Centered()
+							.Width(100);
                         columns.Bound(x => x.IsPrimaryWeight)
                             .Width(100)
                             .Centered()
@@ -44,7 +52,6 @@
                             commands.Edit().Localize(T);
                             commands.Delete().Localize(T);
                         }).Width(180);
-
                     })
                     .ToolBar(x => x.Insert())
                     .Editable(x =>
