--- a/src/Presentation/SmartStore.Web/Administration/Views/News/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/List.cshtml
@@ -46,28 +46,24 @@
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.Title)
-							.Width(350)
+							.Width(450)
                             .Template(x => Html.ActionLink(x.Title, "Edit", new { id = x.Id }))
                             .ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Title #></a>");
                         columns.Bound(x => x.LanguageName);
                         columns.Bound(x => x.Comments)
-                            .Centered()
                             .Template(
                             @<div>
 								@Html.ActionLink(T("Admin.ContentManagement.News.NewsItems.Fields.Comments").Text + " - " + @item.Comments, "Comments", new { filterByNewsItemId = item.Id })
                             </div>
                             )
                             .ClientTemplate("<div><a href=\"Comments?filterByNewsItemId=<#= Id #>\">" + T("Admin.ContentManagement.News.NewsItems.Fields.Comments").Text + " - <#= Comments #>" + "</a></div>");
-                        columns.Bound(x => x.StartDate)
-                            .Centered();
-                        columns.Bound(x => x.EndDate)
-                            .Centered();
+                        columns.Bound(x => x.StartDate);
+                        columns.Bound(x => x.EndDate);
                         columns.Bound(x => x.Published)
                             .Template(item => @Html.SymbolForBool(item.Published))
                             .ClientTemplate(@Html.SymbolForBool("Published"))
                             .Centered();
-                        columns.Bound(x => x.CreatedOn)
-                            .Centered();
+                        columns.Bound(x => x.CreatedOn);
                         columns.Bound(x => x.Id)
                             .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
                             .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
