--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/BestsellersReport.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/BestsellersReport.cshtml
@@ -69,8 +69,12 @@
                             columns.Bound(x => x.ProductName)
 								.Template(x => @Html.LabeledProductName(x.ProductId, x.ProductName, x.ProductTypeName, x.ProductTypeLabelHint))
 								.ClientTemplate(@Html.LabeledProductName("ProductId", "ProductName"));
-                            columns.Bound(x => x.TotalQuantity).Centered().Width(100);
-                            columns.Bound(x => x.TotalAmount).Width(200);
+                            columns.Bound(x => x.TotalQuantity)
+								.Centered()
+								.Width(100);
+                            columns.Bound(x => x.TotalAmount)
+								.RightAlign()
+								.Width(200);
                         })
                         .DataBinding(dataBinding => dataBinding.Ajax().Select("BestsellersReportList", "Order"))
                         .EnableCustomBinding(true))
