--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/ShipmentDetails.cshtml
@@ -16,7 +16,10 @@
         <div class="options">
             @if (Model.DisplayPdfPackagingSlip)
             {
-                <a href="@Url.Action("PdfPackagingSlip", new { shipmentId = Model.Id })" class="btn">@T("Admin.Orders.Shipments.PrintPackagingSlip")</a>
+                <a href="@Url.Action("PdfPackagingSlip", new { shipmentId = Model.Id })" class="btn">
+					<i class="icon-print"></i>
+					@T("Admin.Orders.Shipments.PrintPackagingSlip")
+				</a>
             }
             <button type="submit" id="shipment-delete" class="btn btn-danger"><i class="icon-trash icon-white"></i>&nbsp;@T("Admin.Common.Delete")</button>
         </div>
