--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/BulkEdit.cshtml
@@ -90,11 +90,16 @@
 							.Template(x => @Html.LabeledProductName(x.Id, x.Name, x.ProductTypeName, x.ProductTypeLabelHint))
 							.ClientTemplate(@Html.LabeledProductName("Id", "Name"));
                         columns.Bound(p => p.Sku);
-                        columns.Bound(p => p.Price);
-                        columns.Bound(p => p.OldPrice);
+                        columns.Bound(p => p.Price)
+							.Format("{0:0.00}")
+							.RightAlign();
+                        columns.Bound(p => p.OldPrice)
+							.Format("{0:0.00}")
+							.RightAlign();
                         columns.Bound(p => p.ManageInventoryMethod)
                             .ReadOnly();
-                        columns.Bound(p => p.StockQuantity);
+                        columns.Bound(p => p.StockQuantity)
+							.Centered();
                         columns.Bound(p => p.Published)
                             .Width(100)
                             .Template(item => @Html.SymbolForBool(item.Published))
