--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/LowStockReport.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/LowStockReport.cshtml
@@ -30,10 +30,14 @@
 							.Template(x => @Html.LabeledProductName(x.Id, x.Name, x.ProductTypeName, x.ProductTypeLabelHint))
 							.ClientTemplate(@Html.LabeledProductName("Id", "Name"));
                         columns.Bound(p => p.Sku);
-                        columns.Bound(p => p.Price);
-                        columns.Bound(p => p.StockQuantity);
+                        columns.Bound(p => p.Price)
+							.Format("{0:0.00}")
+							.RightAlign();
+                        columns.Bound(p => p.StockQuantity)
+							.Centered()
+							.Width(140);
                         columns.Bound(p => p.Published)
-                            .Width(100)
+                            .Width(140)
                             .Template(item => @Html.SymbolForBool(item.Published))
                             .ClientTemplate(@Html.SymbolForBool("Published"))
                             .Centered();
