--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Attributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Attributes.cshtml
@@ -26,8 +26,7 @@
             .Columns(columns =>
             {
                 columns.Bound(x => x.ProductAttribute)
-                    .Width(150)
-                    .Centered();
+                    .Width(150);
                 columns.Bound(x => x.TextPrompt)
                     .Width(150)
                     .Centered();
@@ -40,7 +39,7 @@
                     .Width(150)
                     .Centered();
                 columns.Bound(x => x.DisplayOrder1)
-                    .Width(150)
+                    .Width(100)
                     .Centered();
                 columns.Bound(x => x.ViewEditUrl)
                     .Width(200)
@@ -176,6 +175,7 @@
                             .ClientTemplate("<a href=\"<#= ProductUrl #>\" target=\"_blank\"><#= ProductUrlTitle #></a>");
                         columns.Bound(x => x.Sku);
 						columns.Bound(x => x.Price)
+							.Format("{0:0.00}")
 							.RightAlign();
                         columns.Bound(x => x.StockQuantity)
                             .Width(160)
