--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Price.cshtml
@@ -176,14 +176,14 @@
             })
             .Columns(columns =>
             {
-                columns.Bound(x => x.Store)
-                        .Centered();
-                columns.Bound(x => x.CustomerRole)
-                    .Centered();
                 columns.Bound(x => x.Quantity)
-                    .Centered();
-                columns.Bound(x => x.Price1)
-                    .Format("{0:G29}");
+                    .Centered()
+					.Width(120);
+				columns.Bound(x => x.Price1)
+					.Format("{0:0.00}")
+					.RightAlign();
+				columns.Bound(x => x.Store);
+				columns.Bound(x => x.CustomerRole);
                 columns.Command(commands =>
                 {
                     commands.Edit().Localize(T);
@@ -197,7 +197,6 @@
 
             <script type="text/javascript">
                 function onTierPriceEdit(e) {
-                    // codehint: sm-edit
                     $(e.form).find('#Store').select2('val', e.dataItem['StoreId']);
                     $(e.form).find('#CustomerRole').select2('val', e.dataItem['CustomerRoleId']);
                 }
