--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.SpecificationAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.SpecificationAttributes.cshtml
@@ -118,6 +118,8 @@
             </tr>
         </table>
         
+		<p>&nbsp;</p>
+	
         <div>
             @(Html.Telerik().Grid<ProductSpecificationAttributeModel>()
                 .Name("specificationattributes-grid")
@@ -139,7 +141,9 @@
                         .Template(item => @Html.SymbolForBool(item.ShowOnProductPage))
                         .ClientTemplate(@Html.SymbolForBool("ShowOnProductPage"))
                         .Centered();
-                    columns.Bound(x => x.DisplayOrder).Width(100);
+                    columns.Bound(x => x.DisplayOrder)
+						.Centered()
+						.Width(100);
                     columns.Command(commands =>
                     {
                         commands.Edit().Localize(T);
