--- a/src/Presentation/SmartStore.Web/Administration/Views/QueuedEmail/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/QueuedEmail/List.cshtml
@@ -105,7 +105,9 @@
 
                             columns.Bound(x => x.Id).Width(50);
                             columns.Bound(x => x.Subject).Width(300);
-                            columns.Bound(x => x.Priority).Width(50);
+                            columns.Bound(x => x.Priority)
+								.Centered()
+								.Width(50);
                             columns.Bound(x => x.From).Width(100);
                             columns.Bound(x => x.FromName).Width(100);
                             columns.Bound(x => x.CreatedOn).Width(100);
