--- a/src/Presentation/SmartStore.Web/Administration/Views/Shipping/Providers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shipping/Providers.cshtml
@@ -23,7 +23,6 @@
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.FriendlyName)
-                            .Width(250)
                             .ReadOnly();
                         columns.Template(
                                 @<div>
@@ -31,14 +30,17 @@
                                 </div>
                             )
                             .ClientTemplate("<a href=\"ConfigureProvider?systemName=<#= SystemName #>\">" + T("Admin.Configuration.Shipping.Providers.Configure").Text + "</a>")
-                            .Width(100)
-                            .Centered()
+                            .Width(140)
                             .Title(T("Admin.Configuration.Shipping.Providers.Configure").Text);
-                        columns.Bound(x => x.SystemName).Width(250).ReadOnly();
-                        columns.Bound(x => x.DisplayOrder).Width(100);
+                        columns.Bound(x => x.SystemName)
+							.Width(250)
+							.ReadOnly();
+                        columns.Bound(x => x.DisplayOrder)
+							.Centered()
+							.Width(100);
                         columns.Bound(x => x.IsActive)
                             .Width(100)
-                             .Template(item => @Html.SymbolForBool(item.IsActive))
+                            .Template(item => @Html.SymbolForBool(item.IsActive))
                             .ClientTemplate(@Html.SymbolForBool("IsActive"))
                             .Centered();
                         columns.Command(commands =>
