--- a/src/Presentation/SmartStore.Web/Administration/Views/Widget/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Widget/List.cshtml
@@ -23,7 +23,7 @@
                    .Columns(columns =>
                    {
                        columns.Bound(x => x.FriendlyName)
-                           .Width(150)
+                           .Width(300)
                            .ReadOnly();
                        columns.Template(
                                @<div>
@@ -31,11 +31,12 @@
                                </div>
                            )
                            .ClientTemplate("<a href=\"ConfigureWidget?systemName=<#= SystemName #>\">" + T("Admin.ContentManagement.Widgets.Configure").Text + "</a>")
-                           .Width(100)
-                           .Centered()
+						   .Width(140)
                            .Title(T("Admin.ContentManagement.Widgets.Configure").Text);
-                       columns.Bound(x => x.SystemName).Width(150).ReadOnly();
+                       columns.Bound(x => x.SystemName)
+						   .ReadOnly();
                        columns.Bound(x => x.DisplayOrder)
+						   .Centered()
                            .Width(100);
                        columns.Bound(x => x.IsActive)
                            .Template(item => @Html.SymbolForBool(item.IsActive))
